finished debuging
